--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,4 +19,17 @@
   body {
     font-size: 85%;
   }
+
+  #logo h1 {
+    width: 35px;
+    height: 35px;
+  }
+
+  #logo h2 {
+    font-size: 2.2em;
+  }
+
+  #social {
+    top: 72px;
+  }
 }
