--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,6 +32,12 @@
   #social {
     top: 72px;
   }
+
+  .col-3 {
+    -moz-column-count: 2;
+    
+    column-count: 2
+  }
 }
 
 @media only screen and (max-width: 800px) {
