--- a/css/responsive.css
+++ b/css/responsive.css
@@ -52,3 +52,12 @@
     margin-left: 0;
     float: none;
   }
+
+  .border-right {
+    border: 0;
+  }
+
+  #details div {
+    height: auto;
+    padding-bottom: 20px;
+  }
